# hydrus-v2

./: .gitignore  .gitmodules  README.md
fw/: CMakeLists.txt  fw.kdev4
fw/.kdev4/: fw.kdev4
fw/include/: application.h  blackboard.h  dev-adc.h  dev-gps.h  dev-magnetometer.h  dev-motors.h  gps.h  hydrus-config.h.in  hydrus-math.h  hydrus-traits.h  hydrus-types.h  navigation.h  periodicthread.h  sensors.h  task-comm.h  task-navigation.h  task-sensing.h  task-system.h  task.h
fw/include/navigation/: navcontroller.h  navwaypoints.h
fw/include/platform/: geomag.h  gpio.h  i2c.h  init.h  logger.h  mutex.h  pwm.h  semaphore.h  serialport.h  thread.h  timer.h
fw/include/support/: station.h  sys-stats.h  util-str.h
fw/include/test/: dummytask.h
fw/platform/linux/: geomag.cpp  hardware.cpp  i2c.cpp  init.cpp  linux.cmake  linux.cmake.inc  logger.cpp  main.cpp  pwm.cpp  threading.cpp  timer.cpp
fw/platform/linux/linux-util/: nmea.h
fw/platform/linux/pigpio/: pigpio-helper.h
fw/src/: blackboard.cpp  dev-gps.cpp  gps.cpp  main.cpp  navigation.cpp  periodicthread.cpp
station/: README.BUILD  aboutdialog.ui  droneblackboard.h  droneconnection.cpp  droneconnection.h  dronelog.cpp  dronelog.h  dronemap.cpp  dronemap.h  droneroute.cpp  droneroute.h  dronerouteset.cpp  dronerouteset.h  dronesimulator.cpp  dronesimulator.h  dronestation.h  dwcontrollerhub.cpp  fakedrone.h  logtimelinewidget.cpp  logtimelinewidget.h  logtimelinewidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rcwidget.cpp  rcwidget.h  rcwidget.ui  resources.qrc  serverconfigdialog.cpp  (+7 more)
(+61 files in other folders)
